Updates for BioC fastreeR 1.0.0